Generate new results

--- a/python/Beamforming.ipynb
+++ b/python/Beamforming.ipynb
@@ -80,8 +80,8 @@
     "from audio_stack.beam_former import BeamFormer\n",
     "from pyroomacoustics.soundsource import SoundSource\n",
     "\n",
-    "#chosen_mics = range(4)\n",
-    "chosen_mics = (0,1)\n",
+    "chosen_mics = range(4)\n",
+    "#chosen_mics = (0,1)\n",
     "\n",
     "distance_cm = 500 # in the middle of the room\n",
     "room = generate_room(distance_cm=distance_cm, source=False, chosen_mics=chosen_mics)\n",
@@ -268,7 +268,7 @@
     "    room.add_soundsource(buzzer)\n",
     "    \n",
     "    signals_f = get_buffers(room, signal, n_times=2) # 1 x 4 x n_freqs\n",
-    "    signals_f = signals_f[0, :, :].T\n",
+    "    signals_f = signals_f[0, chosen_mics, :].T\n",
     "    \n",
     "    angles, probs = get_angle_distribution(signals_f[nnz], frequencies[nnz], mics)\n",
     "    ax.plot(angles, probs, color=f\"C{j}\", label=f\"source at {source_angle_deg}$^\\circ$\")\n",
@@ -476,9 +476,22 @@
    "source": [
     "from generate_flying_results import combine_stepper_df\n",
     "stepper_df = pd.read_pickle(\"../datasets/2021_07_08_stepper_fast/all_data.pkl\")\n",
-    "data_df = combine_stepper_df(stepper_df, motors=\"all45000\", bin_selection=5, average=False)\n",
+    "data_df = combine_stepper_df(stepper_df, motors=\"all45000\", bin_selection=5, average=False, platform=\"crazyflie\")\n",
     "print(data_df)\n",
     "print(data_df.stft.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5f48ab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from generate_flying_results import combine_stepper_df\n",
+    "stepper_df = pd.read_pickle(\"../datasets/2021_07_27_epuck_wall/all_data.pkl\")\n",
+    "data_df = combine_stepper_df(stepper_df, motors=\"sweep_and_move\", bin_selection=0, average=False, platform=\"epuck\")\n",
+    "data_df.stft.shape"
    ]
   },
   {
@@ -488,7 +501,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from generate_flying_results import combine_stepper_df\n",
     "data_df_all = pd.read_pickle(\"../datasets/2021_10_12_flying/all_data.pkl\")\n",
     "data_df = data_df_all.loc[data_df_all.appendix==\"_5\"].iloc[0]\n",
     "data_df\n",
@@ -537,6 +549,7 @@
     "\n",
     "freqs_all = data_df.frequencies_matrix[0, :]\n",
     "nnz = freqs_all > 0\n",
+    "print(freqs_all)\n",
     "\n",
     "context = Context.get_platform_setup()\n",
     "\n",
@@ -550,9 +563,9 @@
     "\n",
     "#angles_deg = [132]\n",
     "WallDetection.BEAMFORM = True\n",
-    "wall_detection = WallDetection(python_only=True, estimator=\"split_particle\")\n",
-    "#wall_detection = WallDetection(python_only=True, estimator=\"particle\")\n",
-    "                               #angles_deg=angles_deg)\n",
+    "#wall_detection = WallDetection(python_only=True, estimator=\"split_particle\")\n",
+    "print(\"initializing\")\n",
+    "wall_detection = WallDetection(python_only=True, estimator=\"particle\")\n",
     "#wall_detection = WallDetection(python_only=True, estimator=\"moving\")\n",
     "#wall_detection = WallDetection(python_only=True, estimator=\"histogram\")\n",
     "\n",
