--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -105,11 +105,11 @@
     "    exp_name = \"2021_07_08_stepper_fast\"; # thesis\n",
     "    #exp_name = \"2021_10_07_stepper\"\n",
     "    motors = \"all45000\"\n",
-    "    snr = 5\n",
+    "    bin_selection = 5\n",
     "else:\n",
     "    exp_name = \"2021_07_27_epuck_wall\"; # new sweep, better pipeline\n",
     "    motors = \"sweep_and_move\" \n",
-    "    snr = 0\n",
+    "    bin_selection = 0\n",
     "mic_type = \"audio_deck\""
    ]
   },
@@ -124,7 +124,7 @@
     "from utils.data_collector import DataCollector\n",
     "\n",
     "data_collector = DataCollector()\n",
-    "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors, snr)\n",
+    "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors, bin_selection)\n",
     "if not backup_exists: \n",
     "    print('generate data using script generate_df_results.')\n",
     "df_matrix, df_dist, df_freq = data_collector.get_df_matrix()"
@@ -164,13 +164,13 @@
     "    fig, axs = plt.subplots(1, 2, sharey=True)\n",
     "    fig.set_size_inches(10, 5)\n",
     "    calib_function_median, freqs = get_calibration_function_median(\n",
-    "        exp_name, mic_type, snr=snr, ax=axs[0], motors=motors_here\n",
+    "        exp_name, mic_type, snr=bin_selection, ax=axs[0], motors=motors_here\n",
     "    )\n",
     "    axs[0].legend(loc='lower right')\n",
     "    axs[0].set_title(\"calibration-individual\")\n",
     "\n",
     "    calib_function_median_one, freqs = get_calibration_function_median(\n",
-    "        exp_name, mic_type, ax=axs[1], fit_one_gain=True, snr=snr, motors=motors_here\n",
+    "        exp_name, mic_type, ax=axs[1], fit_one_gain=True, snr=bin_selection, motors=motors_here\n",
     "    )\n",
     "    axs[1].set_title(\"calibration-global\")\n",
     "    axs[1].set_ylabel('')\n",
@@ -269,11 +269,9 @@
     "\n",
     "from plot_helpers import color, ls, units, labels\n",
     "\n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform.pkl\")\n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform_new.pkl\")\n",
+    "plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform_new.pkl\")\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_test2.pkl\")\n",
     "\n",
-    "plot_df = pd.read_pickle(\"results/stepper_results.pkl\")\n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_beamform.pkl\")\n",
     "plot_df = plot_df.loc[plot_df.method.str.startswith(\"calibrated\")]\n",
     "\n",
     "# add extra columns for plots\n",
@@ -352,15 +350,21 @@
    "outputs": [],
    "source": [
     "from plot_helpers import add_double_legend, labels, ls\n",
+    "\n",
     "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1_uniform_new.pkl\")\n",
     "#plot_df = pd.read_pickle(\"results/stepper_results_online_seed1.pkl\")\n",
     "\n",
     "beamform = False\n",
     "\n",
+    "if PLATFORM == \"crazyflie\":\n",
+    "    name = \"stepper\"\n",
+    "elif PLATFORM == \"epuck\":\n",
+    "    name = \"epuck\"\n",
+    "\n",
     "if beamform:\n",
-    "    fname = \"results/stepper_results_beamform_test2.pkl\"\n",
+    "    fname = f\"results/{name}_results_beamform.pkl\"\n",
     "else:\n",
-    "    fname = \"results/stepper_results_test2.pkl\"\n",
+    "    fname = f\"results/{name}_results.pkl\"\n",
     "\n",
     "plot_df = pd.read_pickle(fname)\n",
     "\n",
@@ -398,93 +402,11 @@
     "        axs[i].yaxis.set_label_coords(-0.15, 0.5)\n",
     "    add_double_legend(axs[i])\n",
     "    fig.subplots_adjust(wspace=0.3)\n",
+    "    continue\n",
     "    if beamform: \n",
     "        save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_cdfs_beamform.pdf\")\n",
     "    else:\n",
     "        save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_cdfs.pdf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from plot_helpers import add_double_legend\n",
-    "from utils.pandas_utils import filter_by_dict\n",
-    "\n",
-    "def convert_to_str(row):\n",
-    "    chosen_mic = row.chosen_mics\n",
-    "    chosen_mic_str = \"-\".join(map(str, chosen_mic))\n",
-    "    row.chosen_mics = chosen_mic_str\n",
-    "    return row\n",
-    "\n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_coarse.pkl\") # different ones, coarse only.\n",
-    "#discretization = \"coarse\"\n",
-    "\n",
-    "beamform = True\n",
-    "#beamform = True\n",
-    "\n",
-    "if beamform:\n",
-    "    plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_final_beamform_test2.pkl\")\n",
-    "    chosen_dict={\"method\": \"calibrated particle 666\"}\n",
-    "    #chosen_dict={\"method\": \"theoretical particle 666\"} # works as espected\n",
-    "else:\n",
-    "    plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_final_test2.pkl\")\n",
-    "    chosen_dict={\"method\": \"calibrated particle 666\"}\n",
-    "    #chosen_dict={\"method\": \"theoretical particle 666\"} # works as expected\n",
-    "    \n",
-    "#plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_final.pkl\")\n",
-    "#chosen_dict={\"discretization\":\"fine\"}\n",
-    "\n",
-    "\n",
-    "X_MAX = {\n",
-    "    \"bayes angle\": plot_df[plot_df.algorithm==\"bayes angle\"].error.max(),\n",
-    "    \"bayes distance\": 30 #plot_df[plot_df.algorithm==\"bayes distance\"].error.max()\n",
-    "}\n",
-    "\n",
-    "try_df = filter_by_dict(plot_df, chosen_dict)\n",
-    "try_df = try_df.loc[~try_df.method.isin([\"fixed\", \"random\"])]\n",
-    "if len(try_df) == 0:\n",
-    "    print(\"Warning: deleted all rows.\", discretization, plot_df.discretization.unique())\n",
-    "else:\n",
-    "    plot_df = try_df\n",
-    "plot_df = plot_df.apply(convert_to_str, axis=1)\n",
-    "\n",
-    "colors = plt.get_cmap(\"viridis\", lut=len(plot_df.chosen_mics.unique()))\n",
-    "\n",
-    "fig, axs = plt.subplots(1, 2)\n",
-    "fig.set_size_inches(4*figsize, 2*figsize)\n",
-    "\n",
-    "for i, (algorithm, df_dis) in enumerate(plot_df.groupby(\"algorithm\", sort=False)):\n",
-    "    boxplots = {}\n",
-    "    for j, (chosen_mics, df) in enumerate(df_dis.groupby(\"chosen_mics\", sort=False)):\n",
-    "        #just a sanity check that each distance only appears once\n",
-    "        if not len(df.distance) == len(df.distance.unique()):\n",
-    "            print(df)\n",
-    "            break\n",
-    "        boxplots[chosen_mics] = df.error\n",
-    "        cdf = sorted(np.abs(df.error))\n",
-    "        axs[i].plot(cdf, np.linspace(0, 1, len(cdf)), label=chosen_mics, color=colors(j))\n",
-    "        axs[i].grid(True)\n",
-    "    axs[i].set_xlim(0, X_MAX[algorithm])\n",
-    "    axs[i].set_title(f\"{algorithm.replace('bayes', '')} estimation\")\n",
-    "    axs[i].set_xlabel(f\"absolute error [{units[algorithm]}]\")\n",
-    "    axs[i].set_ylabel(\"cdf [-]\")\n",
-    "    axs[i].yaxis.set_label_coords(-0.15, 0.5)\n",
-    "    \n",
-    "    fig_box, ax_plot = plt.subplots()\n",
-    "    ax_plot.boxplot(boxplots.values())\n",
-    "    ax_plot.set_xticklabels(boxplots.keys(), rotation=45)\n",
-    "\n",
-    "axs[i].legend(loc=\"upper left\", bbox_to_anchor=[1.0,1.0], title=\"used mics\", ncol=2)\n",
-    "#add_double_legend(axs[i])\n",
-    "fig.subplots_adjust(wspace=0.3)\n",
-    "\n",
-    "if beamform: \n",
-    "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_mics_cdfs_beamform.pdf\")\n",
-    "else:\n",
-    "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_mics_cdfs.pdf\")"
    ]
   },
   {
@@ -497,18 +419,14 @@
    "source": [
     "from utils.pandas_utils import filter_by_dict\n",
     "\n",
-    "from utils.constants import PLATFORM\n",
-    "if PLATFORM == \"epuck\":\n",
-    "    raise NotImplementedError(\"Nothing to be done for epuck\")\n",
-    "\n",
-    "filename = \"results/stepper_results_online_seed1_uniform.pkl\"\n",
+    "#filename = \"results/stepper_results_online_seed1_uniform.pkl\"\n",
     "#filename = \"results/stepper_results_online_seed1.pkl\"\n",
-    "try:\n",
-    "    plot_df = pd.read_pickle(filename)\n",
-    "    print(\"read\", filename)\n",
-    "except FileNotFoundError:\n",
-    "    print(\"Could not read\", filename)\n",
-    "    print(\"Generate results using generate_filtering_results.py\")\n",
+    "#try:\n",
+    "#    plot_df = pd.read_pickle(filename)\n",
+    "#    print(\"read\", filename)\n",
+    "#except FileNotFoundError:\n",
+    "#    print(\"Could not read\", filename)\n",
+    "#    print(\"Generate results using generate_filtering_results.py\")\n",
     "\n",
     "#chosen_dicts = {\n",
     "    #\"algorithm\": [\"bayes distance\", \"bayes angle\"],\n",
@@ -560,6 +478,104 @@
     "    save_fig(fig_d, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_errors_d.pdf\")\n",
     "    fig_a.subplots_adjust(wspace=0.3)\n",
     "    save_fig(fig_a, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_errors_a.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.constants import SPEED_OF_SOUND\n",
+    "print(freqs)\n",
+    "delta_f = np.min(np.diff(freqs))\n",
+    "max_d = SPEED_OF_SOUND / (4 * delta_f)\n",
+    "print(max_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plot_helpers import add_double_legend\n",
+    "from utils.pandas_utils import filter_by_dict\n",
+    "\n",
+    "def convert_to_str(row):\n",
+    "    chosen_mic = row.chosen_mics\n",
+    "    chosen_mic_str = \"-\".join(map(str, chosen_mic))\n",
+    "    row.chosen_mics = chosen_mic_str\n",
+    "    return row\n",
+    "\n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_coarse.pkl\") # different ones, coarse only.\n",
+    "\n",
+    "beamform = False\n",
+    "#beamform = True\n",
+    "\n",
+    "if beamform:\n",
+    "    #plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_final_beamform_test2.pkl\")\n",
+    "    plot_df = pd.read_pickle(f\"results/{name}_results_mics_ablation_beamform.pkl\")\n",
+    "    chosen_dict={\"method\": \"calibrated particle 666\"}\n",
+    "    #chosen_dict={\"method\": \"theoretical particle 666\"} # works as espected\n",
+    "else:\n",
+    "    #plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_final_test2.pkl\")\n",
+    "    plot_df = pd.read_pickle(f\"results/{name}_results_mics_ablation.pkl\")\n",
+    "    chosen_dict={\"method\": \"calibrated particle 666\"}\n",
+    "    #chosen_dict={\"method\": \"theoretical particle 666\"} # works as expected\n",
+    "    \n",
+    "#plot_df = pd.read_pickle(\"results/stepper_results_mics_ablation_final.pkl\")\n",
+    "#chosen_dict={\"discretization\":\"fine\"}\n",
+    "\n",
+    "\n",
+    "X_MAX = {\n",
+    "    \"bayes angle\": plot_df[plot_df.algorithm==\"bayes angle\"].error.max(),\n",
+    "    \"bayes distance\": 30 #plot_df[plot_df.algorithm==\"bayes distance\"].error.max()\n",
+    "}\n",
+    "\n",
+    "try_df = filter_by_dict(plot_df, chosen_dict)\n",
+    "try_df = try_df.loc[~try_df.method.isin([\"fixed\", \"random\"])]\n",
+    "if len(try_df) == 0:\n",
+    "    print(\"Warning: deleted all rows.\", discretization, plot_df.discretization.unique())\n",
+    "else:\n",
+    "    plot_df = try_df\n",
+    "plot_df = plot_df.apply(convert_to_str, axis=1)\n",
+    "discretization = plot_df.discretization.unique()[0]\n",
+    "\n",
+    "colors = plt.get_cmap(\"viridis\", lut=len(plot_df.chosen_mics.unique()))\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 2)\n",
+    "fig.set_size_inches(4*figsize, 2*figsize)\n",
+    "\n",
+    "for i, (algorithm, df_dis) in enumerate(plot_df.groupby(\"algorithm\", sort=False)):\n",
+    "    boxplots = {}\n",
+    "    for j, (chosen_mics, df) in enumerate(df_dis.groupby(\"chosen_mics\", sort=False)):\n",
+    "        #just a sanity check that each distance only appears once\n",
+    "        if not len(df.distance) == len(df.distance.unique()):\n",
+    "            print(df)\n",
+    "            break\n",
+    "        boxplots[chosen_mics] = df.error\n",
+    "        cdf = sorted(np.abs(df.error))\n",
+    "        axs[i].plot(cdf, np.linspace(0, 1, len(cdf)), label=chosen_mics, color=colors(j))\n",
+    "        axs[i].grid(True)\n",
+    "    axs[i].set_xlim(0, X_MAX[algorithm])\n",
+    "    axs[i].set_title(f\"{algorithm.replace('bayes', '')} estimation\")\n",
+    "    axs[i].set_xlabel(f\"absolute error [{units[algorithm]}]\")\n",
+    "    axs[i].set_ylabel(\"cdf [-]\")\n",
+    "    axs[i].yaxis.set_label_coords(-0.15, 0.5)\n",
+    "    \n",
+    "    fig_box, ax_plot = plt.subplots()\n",
+    "    ax_plot.boxplot(boxplots.values())\n",
+    "    ax_plot.set_xticklabels(boxplots.keys(), rotation=45)\n",
+    "\n",
+    "axs[i].legend(loc=\"upper left\", bbox_to_anchor=[1.0,1.0], title=\"used mics\", ncol=2)\n",
+    "#add_double_legend(axs[i])\n",
+    "fig.subplots_adjust(wspace=0.3)\n",
+    "\n",
+    "if beamform: \n",
+    "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_mics_cdfs_beamform.pdf\")\n",
+    "else:\n",
+    "    save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_mics_cdfs.pdf\")"
    ]
   },
   {
