--- a/python/WallStudy.ipynb
+++ b/python/WallStudy.ipynb
@@ -41,6 +41,110 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# FCMW Study\n",
+    "\n",
+    "c = 343 # m / s\n",
+    "distances_cm = np.arange(30, step=3)\n",
+    "times = distances_cm * 1e-2 / c\n",
+    "sampling_rates = 16000 * np.arange(1, 5)\n",
+    "\n",
+    "N = 2**np.arange(4, 15)\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(5, 5)\n",
+    "for FS in sampling_rates:\n",
+    "    f_smears = []\n",
+    "    for n in N:\n",
+    "        f_smears.append(n / FS)\n",
+    "    plt.plot(f_smears, label = f\"N / {FS}Hz\", ls=\":\")\n",
+    "    \n",
+    "cmap = plt.get_cmap('viridis', lut=len(times))\n",
+    "for i, t in enumerate(times):\n",
+    "    plt.axhline(t, color=cmap(i), label=f\"{distances_cm[i]:.0f}cm\")\n",
+    "    \n",
+    "plt.ylim(0, max(times))\n",
+    "plt.ylabel(\"time $t$ [s]\")\n",
+    "plt.grid()\n",
+    "\n",
+    "plt.xticks(range(len(N)), N)\n",
+    "plt.xlabel(\"N\")\n",
+    "plt.legend()\n",
+    "plt.title(\"regions where $t$ is bigger than N/FS are valid.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chosen_N = 32\n",
+    "chosen_d_cm = 20\n",
+    "chosen_FS = 64000\n",
+    "\n",
+    "factor = chosen_d_cm * 1e-2 / c - chosen_N / chosen_FS\n",
+    "fres = chosen_FS / chosen_N\n",
+    "\n",
+    "print(\"Comparison of bandwidth / pulse length requirements:\")\n",
+    "print(\"F/T needs to be much bugger than\", fres / factor)\n",
+    "T_chosen = 1 #1e-3\n",
+    "print(f\"for T={T_chosen} s, F needs to be: {fres / factor * T_chosen:.0f} Hz\", )\n",
+    "F_chosen = 3000\n",
+    "print(f\"for F={F_chosen} Hz, T needs to be: {F_chosen / (fres / factor) * 1e3:.3f} ms\")\n",
+    "\n",
+    "# need F / T such that F/T * "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chosen_t = chosen_d_cm * 1e-2 / c\n",
+    "N_admissible =  chosen_t * sampling_rates\n",
+    "print(\"admissible Ns: smaller than\", N_admissible)\n",
+    "print(\"addmissible Ns: bigger than:\", sampling_rates / chosen_t)\n",
+    "k_min = 1 / chosen_t**2\n",
+    "print(\"minimum value for k = F/T >=\", k_min)\n",
+    "\n",
+    "print(f\"if F is 3000 Hz, T <= {3000/k_min*1e3:.2f}ms\")\n",
+    "\n",
+    "print(\"N has to be bigger than:\", sampling_rates / (k_min * chosen_t))\n",
+    "print(\"N has to be smaller than:\", sampling_rates * chosen_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pulse compression\n",
+    "d_min_cm = 10\n",
+    "t_min = d_min_cm * 1e-2 / c\n",
+    "print(t_min)\n",
+    "\n",
+    "FS_min = 1 / t_min\n",
+    "print(FS_min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bandwidth = 3000\n",
+    "print(f\"pulse range resolution {c / (2 * bandwidth) * 1e3:.1f} mm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def matrix_slices(\n",
     "    df_matrix,\n",
     "    frequencies,\n",
@@ -245,7 +349,7 @@
     "ax.set_title('distance range')\n",
     "#ax.legend(loc='upper left', bbox_to_anchor=[1.0, 1.0])\n",
     "ax.legend(loc='upper right')#, bbox_to_anchor=[1.0, 1.0])\n",
-    "#save_fig(fig, 'plots/theory/limits_distances.pdf')"
+    "save_fig(fig, 'plots/theory/limits_distances.pdf')"
    ]
   },
   {
