--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -41,6 +41,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# check that interpolation works as expected\n",
+    "from numpy import array, float32\n",
+    "freqs =  array([2500., 2562., 2625., 2687., 2750., 2812., 2875., 2937., 3000.,\n",
+    "       3062., 3125., 3187., 3250., 3312., 3375., 3437., 3562., 3625.,\n",
+    "       3687., 3750., 3812., 3875., 3937., 4000., 4062., 4125., 4187.,\n",
+    "       4250., 4312., 4375., 4437., 4500.], dtype=float32) \n",
+    "freqs_interp =  array([2500., 2562., 2625., 2687., 2750., 2812., 2875., 2937., 3000.,\n",
+    "       3062., 3125., 3187., 3250., 3312., 3375., 3437., 3499., 3562.,\n",
+    "       3625., 3687., 3750., 3812., 3875., 3937., 4000., 4062., 4125.,\n",
+    "       4187., 4250., 4312., 4375., 4437., 4500.], dtype=float32)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.scatter(freqs_interp, [0.5] * len(freqs_interp), label=\"interpolated\")\n",
+    "plt.scatter(freqs, [0.6] * len(freqs), label=\"original\")\n",
+    "plt.legend()\n",
+    "plt.ylim(0, 1)\n",
+    "\n",
+    "freqs =  array([3140., 3187., 3234., 3328., 3375., 3468., 3515., 3562., 3984.,\n",
+    "       4031., 4078., 4171., 4218., 4265., 4359., 4406., 4500., 4546.],\n",
+    "      dtype=float32)\n",
+    "freqs_interp =  array([3140., 3187., 3234., 3280., 3328., 3375., 3421., 3468., 3515.,\n",
+    "       3562., 3984., 4031., 4078., 4124., 4171., 4218., 4265., 4311.,\n",
+    "       4359., 4406., 4452., 4500., 4546.], dtype=float32) \n",
+    "\n",
+    "plt.figure()\n",
+    "plt.scatter(freqs_interp, [0.5] * len(freqs_interp), label=\"interpolated\")\n",
+    "plt.scatter(freqs, [0.6] * len(freqs), label=\"original\")\n",
+    "plt.legend()\n",
+    "plt.ylim(0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_title(row, ignore=[]):\n",
     "    categories = row.index.drop([\"matrix distances\", \"matrix angles\", \"distances_cm\", \"angles_deg\", \"average_time\"]).values\n",
     "    title = ''\n",
@@ -61,14 +98,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_estimates_here(results_matrix, xvalues, method=\"mean\"):\n",
-    "    if method == \"argmax\":\n",
+    "def get_estimates_here(results_matrix, xvalues, method=\"max\"):\n",
+    "    if method in [\"argmax\", \"max\"]:\n",
     "        estimates = xvalues[np.argmax(results_matrix, axis=0)].astype(float)\n",
     "    elif method == \"mean\":\n",
     "        estimates = np.empty(results_matrix.shape[1])\n",
     "        for col in range(results_matrix.shape[1]):\n",
     "            mean = np.average(xvalues, weights=results_matrix[:, col], axis=0)\n",
     "            estimates[col] = mean\n",
+    "    else:\n",
+    "        raise ValueError(method)\n",
     "    valid = np.any(results_matrix > 0, axis=0)\n",
     "    estimates[~valid] = np.nan\n",
     "    return estimates"
@@ -211,15 +250,14 @@
     "from utils.plotting_tools import FIGSIZE, save_fig\n",
     "\n",
     "exp_name=\"2021_10_12_flying\"; motors=\"linear_buzzer_cont\"; \n",
-    "appendix=\"_new3\" # best\n",
+    "#appendix=\"_new3\" # best\n",
     "#appendix=\"_new6\" # too fast, otherwise good\n",
     "#appendix=\"_new10\" # okay-ish\n",
     "#appendix=\"_new12\"\n",
-    "\n",
     "#appendix=\"_new4\" # frequencies wrong\n",
     "#appendix=\"_new7\" # frequencies wrong\n",
     "#appendix=\"_new8\" # frequencies wrong\n",
-    "#appendix=\"_1\" # very good\n",
+    "appendix=\"_1\" # very good\n",
     "#appendix=\"_2\" # not good\n",
     "#appendix=\"_3\" # okay\n",
     "#appendix=\"_4\" # good\n",
@@ -228,6 +266,9 @@
     "\n",
     "#exp_name=\"2022_01_27_demo\"; motors=\"live\"; \n",
     "#appendix = \"test4\"\n",
+    "\n",
+    "#exp_name=\"2021_07_27_epuck_wall\"; motors=\"sweep_and_move\"; appendix = \"\"\n",
+    "#exp_name=\"2021_07_08_stepper_fast\"; motors=\"all45000\"; appendix = \"\"\n",
     "\n",
     "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
     "row = results_df.loc[\n",
@@ -246,6 +287,12 @@
     "n_points = magnitudes.shape[0]\n",
     "times = row.seconds[flying]\n",
     "distances = get_groundtruth_distances(exp_name, appendix, flying=True)\n",
+    "\n",
+    "from utils.constants import SPEED_OF_SOUND\n",
+    "delta_f = np.min(np.diff(freqs))\n",
+    "print(\"minimum difference\", delta_f)\n",
+    "max_d = SPEED_OF_SOUND / (4 * delta_f)\n",
+    "print(\"maximum distance:\", max_d)\n",
     "\n",
     "# calibrate and plot calibration\n",
     "calib_on_the_fly = np.median(magnitudes[:n_calib, :, :], axis=0)\n",
@@ -282,7 +329,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -298,19 +345,28 @@
     "simplify_angles = False\n",
     "fig_size_cdf = (10, 4)\n",
     "\n",
+    "exp_name=\"2021_10_12_flying\"\n",
+    "name = \"flying\"; appendices = [\"_new3\", \"_new6\"] + [f\"_{i}\" for i in range(1, 7)] \n",
+    "\n",
+    "#exp_name=\"2021_07_08_stepper_fast\"\n",
+    "#name = \"stepper\"; appendices=[\"\"]\n",
+    "\n",
+    "#exp_name=\"2021_07_27_epuck_wall\"\n",
+    "#name = \"epuck\"; appendices=[\"\"]\n",
+    "\n",
     "#fig_cdf.suptitle(f\"angles simplified {simplify_angles}\")\n",
     "\n",
+    "#beamform = False\n",
+    "beamform = True\n",
     "discretization = \"fine\"\n",
     "\n",
-    "appendices = [\"_new3\", \"_new6\"] + [f\"_{i}\" for i in range(1, 7)] \n",
     "color = {f\"exp{a}\": \"C0\" if \"new\" in a else \"C1\" for i, a in enumerate(appendices) }\n",
     "color[\"random\"] = \"k\"\n",
     "color[\"fixed\"] = \"k\"\n",
     "\n",
-    "relative_std = 0.0\n",
-    "\n",
-    "#for estimator in [\"particle\"]:#, \"moving\"]:\n",
-    "for estimator in [\"histogram\", \"moving\", \"particle\"]:#, \"moving\"]:\n",
+    "#for estimator in [\"moving\"]: #[\"particle\"]:#, \"moving\"]:\n",
+    "for estimator in [\"particle\"]:\n",
+    "#for estimator in [\"histogram\", \"moving\", \"particle\"]:#, \"moving\"]:\n",
     "    fig_cdf, axs_cdf = plt.subplots(1, 2)\n",
     "    fig_cdf.set_size_inches(*fig_size_cdf)\n",
     "    for i_app, appendix in enumerate(appendices):\n",
@@ -321,14 +377,29 @@
     "            correct = True\n",
     "        else:\n",
     "            correct = False\n",
-    "        gt_distances, gt_angles = get_groundtruth_distances(exp_name, appendix, flying=True, angles=True, correct=True)\n",
-    "        fname = f\"results/flying_results_matrices_{estimator}{appendix}_new.pkl\"\n",
+    "            \n",
+    "        if exp_name == \"2021_07_27_epuck_wall\":\n",
+    "            from epuck_description_py.experiments import DISTANCES_CM, WALL_ANGLE_DEG_STEPPER\n",
+    "            gt_distances = DISTANCES_CM\n",
+    "            gt_angles = np.full( len(DISTANCES_CM), WALL_ANGLE_DEG_STEPPER)\n",
+    "        elif exp_name == \"2021_07_08_stepper_fast\":\n",
+    "            print(\"stepper\")\n",
+    "            from crazyflie_description_py.experiments import DISTANCES_CM, WALL_ANGLE_DEG_STEPPER\n",
+    "            gt_distances = DISTANCES_CM\n",
+    "            gt_angles = np.full( len(DISTANCES_CM), WALL_ANGLE_DEG_STEPPER)\n",
+    "        else:\n",
+    "            gt_distances, gt_angles = get_groundtruth_distances(exp_name, appendix, \n",
+    "                                                                flying=True, angles=True, correct=True)\n",
+    "        \n",
+    "        if beamform:\n",
+    "            fname = f\"results/{name}_results_matrices_{estimator}{appendix}_beamform_new.pkl\"\n",
+    "        else:\n",
+    "            fname = f\"results/{name}_results_matrices_{estimator}{appendix}_new.pkl\"\n",
     "        df_mat = pd.read_pickle(fname) \n",
     "        print(\"read\", fname)\n",
     "        df_here = df_mat[\n",
     "            (df_mat[\"calibration param\"]==chosen_calibration_param) & \n",
-    "            (df_mat[\"simplify angles\"]==simplify_angles) & \n",
-    "            (df_mat[\"relative std\"]==relative_std)\n",
+    "            (df_mat[\"simplify angles\"]==simplify_angles) \n",
     "        ]\n",
     "        for i, row in df_here.iterrows():\n",
     "            if estimator == \"particle\":\n",
@@ -376,6 +447,7 @@
     "            ax.set_title(f\" exp{appendix} {estimator}\".replace(\"_\", \"\\\\_\"))\n",
     "            fig.set_size_inches(*fig_size)\n",
     "\n",
+    "    # generate random\n",
     "    d_random = np.random.choice(range(7, 81), size=len(gt_distances))\n",
     "    a_random = np.random.choice(range(360), size=len(gt_angles))\n",
     "    lines = []; leg_labels = []\n",
@@ -383,9 +455,9 @@
     "    line, = axs_cdf[1].plot(sorted(np.abs(angle_error(a_random, gt_angles))), np.linspace(0, 1, len(gt_angles)), color=color[\"random\"])\n",
     "    lines.append(line); leg_labels.append(\"random\")\n",
     "    \n",
+    "    # generate fixed\n",
     "    d_fixed = (80 - 7) / 2\n",
-    "    a_fixed = 90 + 180\n",
-    "    a_random = np.random.choice(range(360), size=len(gt_angles))\n",
+    "    a_fixed = gt_angles[0] + 180\n",
     "    line, = axs_cdf[0].plot(sorted(np.abs(d_fixed-gt_distances)), np.linspace(0, 1, len(gt_distances)), ls=\":\", color=color[\"fixed\"])\n",
     "    lines.append(line); leg_labels.append(\"fixed\")\n",
     "\n",
@@ -408,7 +480,10 @@
     "    axs_cdf[1].set_xlim(0, 200)\n",
     "    fig_cdf.set_size_inches(8, 4)\n",
     "    fig_cdf.subplots_adjust(wspace=0.3)\n",
-    "    save_fig(fig_cdf, f\"plots/experiments/{exp_name}_{discretization.replace(' ','_')}_{estimator}_cdfs.pdf\")"
+    "    if beamform:\n",
+    "        save_fig(fig_cdf, f\"plots/experiments/{exp_name}_{discretization.replace(' ','_')}_{estimator}_beamform_cdfs.pdf\")\n",
+    "    else:\n",
+    "        save_fig(fig_cdf, f\"plots/experiments/{exp_name}_{discretization.replace(' ','_')}_{estimator}_cdfs.pdf\")"
    ]
   },
   {
